ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alphabibber-ingress3
  annotations:
    kubernetes.io/ingress.global-static-ip-name: alphabibber-ingress-ip2
    networking.gke.io/managed-certificates: alphabibber-certificate9
#    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: www.gke.alphabibber.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: frontend-service
              servicePort: 80

#    - host: ${LANDINGPAGE_URL}
#      http:
#        paths:
#          - path: /*
#            backend:
#              serviceName: landingpage-service
#              servicePort: 80

#    - host: ${PRESENTATION_URL}
#      http:
#        paths:
#          - path: /*
#            backend:
#              serviceName: presentation-service
#              servicePort: 80

    - host: signal.gke.alphabibber.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: signalingserver-service
              servicePort: 80

    - host: spaces.gke.alphabibber.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: spacesservice-service
              servicePort: 80
